--- a/index.Rmd
+++ b/index.Rmd
@@ -7,22 +7,26 @@ output: html_document
 knitr::opts_chunk$set(echo = TRUE)
 ```
 
-## R Markdown
+## About
+Thank you very much for coming here. This is awesome. This was prepared after doing a course from JHU on leanpub !
 
-This is an R Markdown document. Markdown is a simple formatting syntax for authoring HTML, PDF, and MS Word documents. For more details on using R Markdown see <http://rmarkdown.rstudio.com>.
+## Interests
 
-When you click the **Knit** button a document will be generated that includes both content as well as the output of any embedded R code chunks within the document. You can embed an R code chunk like this:
+* Leanpub
+* Programming in R
+* Chromebook Data Science
 
-```{r cars}
-summary(cars)
-```
+## Projects
 
-## Including Plots
+* First Webpage in R
+* Data Visualization in R
 
-You can also embed plots, for example:
+## Profiles 
 
-```{r pressure, echo=FALSE}
-plot(pressure)
-```
+* [LinkedIn](https://www.linkedin.com/in/int11pgh/)
+* ...
+* [GitHub](https://github.com/pramod-datascience)
 
-Note that the `echo = FALSE` parameter was added to the code chunk to prevent printing of the R code that generated the plot.
+## Contact
+
+* [e-mail](mailto:pramod.datascience@gmail.com)
