Add a floating TOC

--- a/index.Rmd
+++ b/index.Rmd
@@ -1,4 +1,9 @@
---- title: "Pramod GHimire's website" output: html_document: theme: spacelab toc: true toc_depth: 3 toc_float: true ---
+---
+title: "Pramod Ghimire"
+output:
+  html_document:
+    toc: true
+    toc_float: true
 ---
 
 ```{r setup, include=FALSE}
